<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="ru.tinkoff.fintech.meowle.presentation.shared.auth.AuthViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        tools:context=".presentation.view.AuthActivity">

        <TextView
            android:id="@+id/auth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textSize="36sp"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/til_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginHorizontal="@dimen/medium_horizontal_margin"
            android:error="@{viewModel.name_error}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:textSize="@dimen/text_size_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"
                android:onTextChanged="@{() -> viewModel.onNameTextChanged()}"
                android:hint="@string/name_hint"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:inputType="textCapWords"
                android:maxLength="23"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/til_phone"
            android:layout_marginTop="4dp"
            android:error="@{viewModel.phone_error}"
            android:layout_marginHorizontal="@dimen/medium_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name"
            app:endIconDrawable="@drawable/ic_clear"
            app:endIconTint="@color/text_color"
            app:endIconMode="clear_text"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:textSize="@dimen/text_size_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.phone}"
                android:onTextChanged="@{() -> viewModel.onPhoneTextChanged()}"
                android:hint="@string/phone_hint"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:inputType="phone"
                android:maxLength="12"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:translationY="40dp"
            android:translationX="40dp"
            android:contentDescription="TODO"
            android:rotation="-60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/material_on_surface_disabled"
            app:srcCompat="@drawable/paw" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_marginEnd="150dp"
            android:contentDescription="TODO"
            android:rotation="-80"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/paw"
            app:tint="@color/material_on_surface_disabled" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:translationY="-30dp"
            android:translationX="-60dp"
            android:contentDescription="TODO"
            android:rotation="-60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/submit_button"
            app:srcCompat="@drawable/paw"
            app:tint="@color/material_on_surface_disabled" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:translationY="-30dp"
            android:translationX="-60dp"
            android:contentDescription="TODO"
            android:rotation="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/auth_title"
            app:srcCompat="@drawable/paw"
            app:tint="@color/material_on_surface_disabled" />

        <ImageView
            android:layout_width="95dp"
            android:layout_height="90dp"
            android:contentDescription="TODO"
            android:rotation="-10"
            app:layout_constraintBottom_toTopOf="@+id/auth_title"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/paw"
            app:tint="@color/material_on_surface_disabled" />

        <ImageView
            android:layout_width="95dp"
            android:layout_height="90dp"
            android:translationY="-90dp"
            android:translationX="-20dp"
            android:contentDescription="TODO"
            android:rotation="-40"
            app:layout_constraintBottom_toTopOf="@+id/auth_title"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/paw"
            app:tint="@color/material_on_surface_disabled" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/medium_horizontal_margin"
            android:layout_marginTop="96dp"
            android:id="@+id/submit_button"
            android:text="@string/btn_enter"
            android:onClick="@{() -> viewModel.onSubmitButtonClick()}"
            android:textAllCaps="false"
            android:rotation="0"
            android:transformPivotX="0dp"
            android:background="@drawable/button_drawable"
            app:layout_constraintTop_toBottomOf="@id/til_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/sleepy_cat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:contentDescription="TODO"

            android:rotation="0"
            app:layout_constraintEnd_toEndOf="@+id/submit_button"
            app:layout_constraintTop_toBottomOf="@+id/til_phone"
            app:srcCompat="@drawable/sleepy_cat" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>