...
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tw_search_title"
        android:lines="1"
        android:layout_marginHorizontal="@dimen/default_horizontal_margin"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/search_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_search"
        />

    <com.google.android.material.textfield.TextInputLayout
...
